--- a/tso-tc-nomap.html
+++ b/tso-tc-nomap.html
@@ -237,7 +237,11 @@
 
 <p><span class="h3">What type of documents or correspondence do you want to send?</span></p>
 	<ul>
-		<li data-wb-fieldflow='{"action": "removeClass", "source": "#q4-a", "class": "mfp-hide", "live":true}'>I want to file a request to cancel administrative charges on a dishonored payment</li>
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#sudbury", "class": "mfp-hide", "live":true}'>Personal income tax (T1)</li> <!-- Winnepeg -->
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#princeedwardisland", "class": "mfp-hide", "live":true}'>Corporation income tax (T2)</li> <!-- Winnepeg -->
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#princeedwardisland", "class": "mfp-hide", "live":true}'>Business taxes</li> <!-- Prince Edward Island -->
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#sudbury", "class": "mfp-hide", "live":true}'>Benefits</li> <!-- Winnepeg -->
+		<li data-wb-fieldflow='{"action": "removeClass", "source": "#sudburyothercorrespondence", "class": "mfp-hide", "live":true}'>Other</li> <!-- Winnipeg (other correspondence) -->
 	</ul>	
 </div>
 
@@ -253,32 +257,152 @@
 <!-- The results ----------------------------------------------------------------------------->
 <!-------------------------------------------------------------------------------------------->
 
-<section id="winnipeg" class="results well mfp-hide">
-<h3>Winnipeg</h3>	
-<p>Send your documents or correspondence to:</p>
+<!-- PEI tax centre -->
+<section id="princeedwardisland" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
 <p>Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
 <p>Fax: 204-984-5164</p>
+</div>
 </section>
 
-<section id="princeedwardisland" class="results well mfp-hide">
-<h3>Prince Edward Island</h3>	
-<p>Send your documents or correspondence to:</p>
+<!-- Jonquière tax centre -->
+<section id="jonquiere" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
 <p>Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
 <p>Fax: 204-984-5164</p>
+</div>
 </section>
 
-<section id="winnipegothercorrespondence" class="results well mfp-hide">
-<h3>Winnipeg (other correspondence)</h3>	
-<p>Send your documents or correspondence to:</p>
+<!-- Sudbury tax centre -->
+<section id="sudbury" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
 <p>Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
 <p>Fax: 204-984-5164</p>
+</div>
 </section>
+
+<!-- Sudbury tax centre (address for "other correspondence") -->
+<section id="sudburyothercorrespondence" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</section>
+
+<!-- Winnipeg tax centre -->
+<section id="winnipeg" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</div>
+</section>
+
+<!-- Winnipeg tax centre (address for "other correspondence") -->
+<section id="winnipegothercorrespondence" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</section>
+
+<!-- Newfoundland and Labrador -->
+<section id="newfoundlandandlabrador" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</section>
+
+<!-- Shawinigan-Sud -->
+<section id="shawinigansud" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</section>
+
+<!-- Surrey -->
+<section id="surrey" class="results mfp-hide">
+<div class="panel panel-default">
+<div class="panel-heading">	
+<h3 class="panel-title">Send your documents or correspondence to:</h3>
+</div>
+<div class="panel-body">
+<p>Winnipeg tax centre<br>
+Post Office Box 14001, Station Main<br>
+Winnipeg MB  R3C 3M3</p>
+</div>
+<div class="panel-footer">
+<p>Fax: 204-984-5164</p>
+</div>
+</section>
+
+
 
 <div class="pagedetails">
 <div class="row">
