--- a/tso-tc-nomap.html
+++ b/tso-tc-nomap.html
@@ -260,80 +260,75 @@
 <!-- PEI tax centre -->
 <section id="princeedwardisland" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</p>
 </div>
 <div class="panel-body">
 <p>Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Jonquière tax centre -->
 <section id="jonquiere" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Sudbury tax centre -->
 <section id="sudbury" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Sudbury tax centre (address for "other correspondence") -->
 <section id="sudburyothercorrespondence" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Winnipeg tax centre -->
 <section id="winnipeg" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</p>
 </div>
 </div>
 </section>
@@ -341,64 +336,60 @@ Winnipeg MB  R3C 3M3</p>
 <!-- Winnipeg tax centre (address for "other correspondence") -->
 <section id="winnipegothercorrespondence" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Newfoundland and Labrador -->
 <section id="newfoundlandandlabrador" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Shawinigan-Sud -->
 <section id="shawinigansud" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
 <!-- Surrey -->
 <section id="surrey" class="results mfp-hide">
 <div class="panel panel-default">
-<div class="panel-heading">	
-<h3 class="panel-title">Send your documents or correspondence to:</h3>
-</div>
+<header class="panel-heading">
+<p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
+</header>
 <div class="panel-body">
-<p>Winnipeg tax centre<br>
+<p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB  R3C 3M3</p>
 </div>
-<div class="panel-footer">
-<p>Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
