--- a/tso-tc-nomap.html
+++ b/tso-tc-nomap.html
@@ -266,7 +266,7 @@
 <div class="panel-body">
 <p>Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -281,7 +281,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -296,7 +296,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -311,7 +311,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -326,10 +326,9 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</p>
-</div>
 </div>
 </section>
 
@@ -342,7 +341,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -357,7 +356,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -372,7 +371,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
@@ -387,7 +386,7 @@ Winnipeg MB  R3C 3M3</p>
 <div class="panel-body">
 <p class="mrgn-lft-lg mrgn-bttm-0">Winnipeg tax centre<br>
 Post Office Box 14001, Station Main<br>
-Winnipeg MB  R3C 3M3</p>
+Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
 <footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
