--- a/tso-tc-nomap.html
+++ b/tso-tc-nomap.html
@@ -318,7 +318,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 </section>
 
 <!-- Winnipeg tax centre -->
-<section id="winnipeg" class="results mfp-hide">
+<section id="winnipeg" class="results mfp-hide col-md-8">
 <div class="panel panel-default">
 <header class="panel-heading">
 <p class="panel-title"><strong>Send your documents or correspondence to:</strong></p>
@@ -328,7 +328,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</p>
+<footer class="panel-footer">Fax: 204-984-5164</footer>
 </div>
 </section>
 
