--- a/tso-tc-nomap.html
+++ b/tso-tc-nomap.html
@@ -145,7 +145,7 @@
 				<ul>
 					<li>Alberta
 						<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true, "noForm": true}'>
-						<p><span class="h3">Select a city.</span></p>
+						<p><span class="h3">Select the city closest to you.</span></p>
 							<ul>		
       							<li data-wb-fieldflow='{"action": "append", "source": "#scenario-a", "renderas":"radio", "noreqlabel": true}'>Calgary</a></li>
 								<li>Edmonton</li>
@@ -161,7 +161,7 @@
 					<li>Nova Scotia</li>
 					<li>Ontario
 						<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true, "noForm": true}'>
-						<p><span class="h3">Select a city.</span></p>
+						<p><span class="h3">Select the city closest to you.</span></p>
 							<ul>		
       							<li data-wb-fieldflow='{"action": "append", "source": "#scenario-b", "renderas":"radio", "noreqlabel": true}'>Ottawa</a></li>
 								<li>Toronto</li>
