mash the 2 together

--- a/tso-tc-imagemap.html
+++ b/tso-tc-imagemap.html
@@ -4,24 +4,24 @@
 
 <head>
 
-
+<base href="https://www.canada.ca/">
 
 <title>Tax services offices and tax centres - Canada.ca</title>
 
 <meta name="robots" content="noindex, nofollow">
 
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="https://www.canada.ca/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/clientlib-all.min.css" type="text/css">
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/wet-boew.min.css"/>
-<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css">
+<link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="/etc/designs/canada/clientlib-all.min.css" type="text/css">
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/wet-boew.min.css"/>
+<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
 <script src="//assets.adobedtm.com/caacec67651710193d2331efef325107c23a0145/satelliteLib-78cf42deb149c9766cbaaa6151e252b9b67c0200.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-		<link href="https://www.canada.ca/etc/"designs/canada/wet-boew/assets/favicon.ico" rel="shortcut icon" />
+		<link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="shortcut icon" />
 		
-		<link rel="stylesheet" href="https://www.canada.ca/etc/"designs/canada/wet-boew/css/ie8-theme.min.css" />
+		<link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/ie8-theme.min.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="/etc/designs/canada/wet-boew/js/ie8-wet-boew.min.js"></script>
 		<![endif]-->
@@ -29,7 +29,6 @@
 		
 		
 		<![endif]-->
-	
 </head>
 
 <body>
@@ -125,7 +124,7 @@
 
 <h1>Find a CRA address</h1>
 
-<div class="col-md-12">
+<div class="col-md-6">
 
 <div class="wb-frmvld">
 
@@ -133,7 +132,7 @@
 
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
-"reset": { "action": "addClass", "source":".results,#osm-map,#scenario-a,#scenario-b", "class": "mfp-hide"}, 
+"reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, 
 "noForm": true,					     
 "noreqlabel": true
 }'>
@@ -186,10 +185,6 @@
 <input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Mailing address" />
 </section>
 
-<section id="tso-bttn-2" class="results mfp-hide">
-<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Office locations" />
-</section>	
-	
 </form>
 
 </div>
@@ -197,14 +192,6 @@
 </div>
 
 <div class="clearfix"></div>
-
-<style>
-.wb-geomap-map {
-	height: 500px !important;
-	transform: translateZ(0); 
-	}		
-</style>	
-
 
 <!------------------------------------------>
 <!-- Different scenarios that get re-used -->
@@ -426,6 +413,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 </section>
 
 
+
 <div class="pagedetails">
 <div class="row">
 <div class="col-sm-6 col-md-5 col-lg-4">
@@ -608,21 +596,21 @@ Winnipeg MB &nbsp;R3C 3M3</p>
                         <a href="#wb-cont">Top of page <span class="glyphicon glyphicon-chevron-up"></span></a>
                     </div>
                     <div class="col-xs-6 col-md-2 text-right">
-                        <object type="image/svg+xml" tabindex="-1" role="img" data="https://www.canada.ca/etc/designs/canada/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+                        <object type="image/svg+xml" tabindex="-1" role="img" data="/etc/designs/canada/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 </div>
-    
-<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/jquery.min.js"></script>
-<script type="text/javascript" src="https://www.canada.ca/etc/clientlibs/granite/utils.min.js"></script>
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/clientlib-publish.min.js"></script>
+
+<script type="text/javascript" src="/etc/clientlibs/granite/jquery.min.js"></script>
+<script type="text/javascript" src="/etc/clientlibs/granite/utils.min.js"></script>
+<script type="text/javascript" src="/etc/designs/canada/clientlib-publish.min.js"></script>
 
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
+<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 
 <!--[if lt IE 9]>
@@ -630,7 +618,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 <![endif]-->
 
 <script src="https://wet-boew.github.io/v4.0-ci/demos/geomap/demo/client_functions.min.js"></script>
-<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 </body>
 </html>
