--- a/tso-tc.html
+++ b/tso-tc.html
@@ -132,7 +132,7 @@
 
 <div class="wb-fieldflow" data-wb-fieldflow='{
 "renderas":"radio", 
-"reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, 
+"reset": { "action": "addClass", "source":".results,#osm-map,#scenario-a,#scenario-b", "class": "mfp-hide"}, 
 "noForm": true,					     
 "noreqlabel": true
 }'>
