--- a/tso-tc.html
+++ b/tso-tc.html
@@ -254,23 +254,23 @@
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
 			<td>Victoria</td>
-			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4<br>Fax: 250-363-8188</td>
+			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4</td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
 			<td>Vancouver</td>
-			<td>468 Terminal Ave<br>Vancouver BC  V6A 0C1<br>Fax: 604-689-7536</td>
+			<td>468 Terminal Ave<br>Vancouver BC  V6A 0C1</td>
 		</tr>	
 		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
 			<td>Surrey</td>
-			<td>9737 King George Boulevard<br>Surrey BC  V3T 5W6<br>Fax: 604-587-2010</td>
+			<td>9737 King George Boulevard<br>Surrey BC  V3T 5W6</td>
 		</tr>				
 		<tr data-geometry="POINT (-122.748619 53.918259)" data-type="wkt">
 			<td>Prince George</td>
-			<td>280 Victoria Street<br>Prince George BC  V2L 4X3<br>Fax: 250-561-7869</td>
+			<td>280 Victoria Street<br>Prince George BC  V2L 4X3</td>
 		</tr>
 		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
 			<td>Penticton</td>
-			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6<br>Fax: 250-492-8346</td>
+			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6</td>
 		</tr>
 		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
 			<td>Kelowna</td>
